src/components/collapse/Collapse.scss
@import '../../sass/main.scss';

.collapse {
    background-color: $color-tertiary;
    max-width: 1023px;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    margin: 10px auto;
    &_title{
        @include flex(row, space-between, center);
        background-color: $color-secondary;
        color: $color-primary;
        border-radius: 10px;
        font-weight: 500;
        font-size: 24px;
        padding: 10px 15px;
        cursor: pointer;
        @media screen and (max-width: 500px) {
                        font-size: 12px;
                    }
        .arrow{
            transition: all 0.3s ease-in-out;
            @media screen and (max-width: 500px){
                width: 12px;   
            }
        }
        .arrow_up {
            transform: rotate(0deg);
        }
        .arrow_down {
            transform: rotate(180deg);
        }
    }
    &_description {
        display: flex;
        flex-direction: column;
        gap: 5px;
        letter-spacing: 1px;
        visibility: visible;
        opacity: 1;
        height: auto;
        padding: 10px;
        letter-spacing: 1px;
        font-size: 24px;
        font-weight: 400;
        color: $color-secondary;
        transition: visibility 0.5s ease-in-out,
                    opacity 0.5s ease-in-out,
                    height 0.5s ease-in-out;
                    @media screen and (max-width: 500px) {
                        font-size: 12px;
                    }
    }
    &_hidden_description {
        visibility: hidden;
        opacity: 0;
        height: 0;
    }
}

.accomodation_collapse{
    display: flex;
    justify-content: space-between;
    gap: 70px;
    margin: 30px auto;
    width: 95%;
    &_item{
        width: 50%;
    }
    @media screen and (max-width: 650px){
        flex-direction: column;
        gap: 20px;
        margin: 20px auto;
        &_item{
            width: 100%;
        }    
    }
}

